--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <title>pixi-webpack-demo</title>
     <style>
-      html,
-      body {
-        width: 100%;
-        height: 100%;
-        padding: 0;
-        margin: 0;
-        overflow: hidden;
-        background: transparent;
-      }
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+            overflow: hidden;
+            background: #1FA2FF; /* fallback for old browsers */
+            background: -webkit-linear-gradient(to top, #A6FFCB, #12D8FA, #1fa2ff); /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to top, #A6FFCB, #12D8FA, #1FA2FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-      canvas {
-        max-width: 100%;
-        max-height: 100%;
-        margin: 0 auto;
-        padding: 0;
-        overflow: hidden;
-        position: absolute;
-      }
+        }
+
+        canvas {
+            max-width: 100%;
+            max-height: 100%;
+            margin: 0 auto;
+            padding: 0;
+            overflow: hidden;
+            position: absolute;
+        }
     </style>
-  </head>
+</head>
 
-  <body>
-    <canvas id="scene"></canvas>
-  </body>
+<body>
+<canvas id="scene"></canvas>
+</body>
 
 </html>
