--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,9 @@
             gap: 3rem;
         }
         .card {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
             transition: 0.3s;
             width: 40%;
